--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,21 +1,20 @@
-@import '../../constants/constants.module.scss';
-
 body {
   overflow: hidden;
 
   .page {
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
     margin: 0 auto;
     padding: 0;
-    box-sizing: border-box;
+
+    font-family: Arial, Helvetica, sans-serif;
+    text-size-adjust: 100%;
+    text-rendering: optimizelegibility;
+
     background-color: inherit;
-    font-family:Arial, Helvetica, sans-serif;
-    text-rendering: optimizeLegibility;
+
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
   }
 }
