--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,31 @@
 @use './normalize.css';
+
+@font-face {
+  font-family: 'Germano Regular';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url('../assets/fonts/Germano-Regular.woff2') format('woff2'),
+    url('../assets/fonts/Germano-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'GOST type B';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url('../assets/fonts/GOST_type_B.woff2') format('woff2'),
+    url('../assets/fonts/GOST_type_B.woff') format('woff');
+}
+
+@font-face {
+  font-family: Molot;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url('../assets/fonts/Molot.woff2') format('woff2'),
+    url('../assets/fonts/Molot.woff') format('woff');
+}
