--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,6 @@
 
 @font-face {
   font-family: 'Germano Regular';
-  font-weight: 400;
   font-style: normal;
   font-display: swap;
   src:
@@ -12,7 +11,6 @@
 
 @font-face {
   font-family: 'GOST type B';
-  font-weight: 400;
   font-style: normal;
   font-display: swap;
   src:
@@ -22,9 +20,8 @@
 
 @font-face {
   font-family: Molot;
-  font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
   src:
     url('../assets/fonts/Molot.woff2') format('woff2'),
     url('../assets/fonts/Molot.woff') format('woff');
