feat: update show/hide animation for header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+
   display: flex;
   column-gap: 53px;
   align-items: center;
@@ -10,9 +15,7 @@
 
   background: linear-gradient(354deg, #fff0 4.84%, #ffffff80 95.76%);
 
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
-  transition-property: all;
+  transition: all 300ms ease-in;
 
   &White {
     background: var(--white, #fff);
@@ -23,9 +26,8 @@
   transform: translate3d(0, -100%, 0);
 }
 
-.headerFixed {
-  position: sticky;
-  top: 0;
+.headerShown {
+  transform: translate3d(0, 0, 0);
 }
 
 .logo {
