--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,14 +20,14 @@
   &White {
     background: var(--white, #fff);
   }
-}
 
-.headerHidden {
-  transform: translate3d(0, -100%, 0);
-}
+  &Hidden {
+    transform: translate3d(0, -100%, 0);
+  }
 
-.headerShown {
-  transform: translate3d(0, 0, 0);
+  // &Shown {
+  //   transform: translate3d(0, 0, 0);
+  // }
 }
 
 .logo {
@@ -58,14 +58,37 @@
 }
 
 .listItem {
+  position: relative;
+
   font-family: var(--text-1-font-family, 'GostTypeB-Standard', sans-serif);
   font-size: var(--text-1-font-size, 32px);
   line-height: var(--text-1-line-height, 38px);
   color: var(--darkblue, #002d63);
+
+  &:hover:not(:first-child):hover {
+    background: var(
+      --radialblue-45,
+      radial-gradient(closest-side, rgb(3 64 137 / 45%) 0%, rgb(255 255 255 / 0%) 100%)
+    );
+  }
+}
+
+.submenu__btn {
+  // position: relative;
+  // z-index: 1;
+
+  &:hover {
+    background: var(
+      --radialblue-45,
+      radial-gradient(closest-side, rgb(3 64 137 / 45%) 0%, rgb(255 255 255 / 0%) 100%)
+    );
+  }
 }
 
 .link {
   &Active {
+    position: relative;
+    z-index: 1;
     text-decoration: underline;
   }
 }
