--- a/src/components/Header/Competitions/Competitions.module.scss
+++ b/src/components/Header/Competitions/Competitions.module.scss
@@ -57,3 +57,28 @@
   color: var(--darkblue, #002d63);
   text-align: left;
 }
+
+@media screen and (width <= 768px) {
+  .competitions {
+    position: static;
+
+    overflow: hidden;
+
+    max-height: 0;
+    margin: 0;
+
+    visibility: visible;
+    opacity: 1;
+
+    transition: max-height 0.5s;
+    transition: all 200ms ease-in;
+
+    &_visible {
+      max-height: 1000px; // костыльная величина
+    }
+  }
+
+  .competitions__list {
+    margin: 0;
+  }
+}
