refactor: center fixed header on realy big screen

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,7 +1,10 @@
 body {
   .page {
+    // position: relative;
+
     box-sizing: border-box;
     width: 100%;
+    max-width: 1920px;
     height: 100%;
     margin: 0 auto;
     padding: 0;
