--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,6 +4,16 @@
   top: 0;
   left: 0;
 
+  width: 100%;
+
+  transition: all 300ms ease-in;
+
+  &_hidden {
+    transform: translate3d(0, -100%, 0);
+  }
+}
+
+.content {
   display: flex;
   column-gap: 53px;
   align-items: center;
@@ -11,23 +21,17 @@
 
   box-sizing: border-box;
   width: 100%;
+  max-width: 1920px;
+  margin: 0 auto;
   padding: 8px 100px;
 
   background: linear-gradient(354deg, #fff0 4.84%, #ffffff80 95.76%);
 
   transition: all 300ms ease-in;
 
-  &White {
+  &_bg_white {
     background: var(--white, #fff);
   }
-
-  &Hidden {
-    transform: translate3d(0, -100%, 0);
-  }
-
-  // &Shown {
-  //   transform: translate3d(0, 0, 0);
-  // }
 }
 
 .logo {
@@ -126,13 +130,13 @@
 }
 
 @media screen and (width <= 1430px) {
-  .header {
+  .header__content {
     padding: 8px 50px;
   }
 }
 
 @media screen and (width <= 1280px) {
-  .header {
+  .header__content {
     padding: 8px 50px;
   }
 
@@ -152,7 +156,7 @@
 }
 
 @media screen and (width <= 1060px) {
-  .header {
+  .header__content {
     column-gap: 20px;
     padding: 8px 30px;
   }
@@ -164,7 +168,7 @@
 }
 
 @media screen and (width <= 768px) {
-  .header {
+  .header__content {
     justify-content: space-between;
     padding: 8px 32px;
   }
