--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,6 +42,11 @@ button {
   box-shadow: none;
 }
 
-// * {
-//   outline: 1px solid #f00 !important;
-// }
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+  padding: 0;
+}
