--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -1,37 +1,35 @@
 .overlay {
-  margin: auto;
-  align-items: center;
-
   display: flex;
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  border: 1px solid red;
 
   box-sizing: border-box;
+  align-items: center;
 
   background-color: var(--shadow);
-  visibility: visible;
+  visibility: hidden;
 
-  z-index: 10;
+  z-index: 11;
 
   &Open {
     visibility: visible;
   }
 
   &Container {
+    margin: 100px auto 0;
     position: relative;
     z-index: 1;
 
     display: flex;
     flex-direction: column;
 
-    width: 500px;
-    min-height: 220px;
-    padding: 64px;
+    width: 1720px;
+    min-height: 1146px;
 
     background-color: var(--white);
+    border-radius: 8px;
   }
 }
