--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -25,7 +25,7 @@
     border-style: solid;
     border-color: var(--darkblue, #002d63);
     border-width: 2px 0px 2px 0px;
-    padding: 8px 160px 22px 160px;
+    padding: 6px 160px 22px 160px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -34,8 +34,11 @@
     flex-shrink: 0;
     position: relative;
   }
+  .contact:nth-child(2n) {
+    border: none;
+  }
 
-  .headline {
+  .inputContainer {
     width: 1400px;
     display: flex;
     flex-direction: row;
