feat: create errors for inputs, fix: delete border for contact

--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -22,19 +22,30 @@
   }
 
   .contact {
-    border-style: solid;
-    border-color: var(--darkblue, #002d63);
+    border: solid var(--darkblue, #002d63);
     border-width: 2px 0px 2px 0px;
     padding: 6px 160px 22px 160px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    align-items: flex-start;
-    justify-content: center;
-    flex-shrink: 0;
     position: relative;
+
+    .inputError {
+      padding: 12px 120px 0px 220px;
+      color: var(--error, #bf1700);
+      text-align: left;
+      font-family: var(--title-h-4-font-family, 'Germano-Regular', sans-serif);
+      font-size: var(--title-h-4-font-size, 48px);
+      line-height: var(--title-h-4-line-height, 48px);
+      font-weight: var(--title-h-4-font-weight, 400);
+      flex: 1;
+      display: none;
+    }
+    .inputErrorActive {
+      display: flex;
+    }
   }
-  .contact:nth-child(2n) {
+
+  .contact:nth-of-type(2n) {
     border: none;
   }
 
@@ -43,11 +54,30 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    align-items: flex-end;
-    justify-content: flex-start;
-    align-self: stretch;
-    flex-shrink: 0;
     position: relative;
+
+    .input {
+      margin: 0;
+      padding: 0;
+      width: 1180px;
+      height: 80px;
+      border: none;
+      gap: 10px;
+      font-family: var(--title-h-2-font-family, 'Germano-Regular', sans-serif);
+      font-size: var(--title-h-2-font-size, 80px);
+      line-height: var(--title-h-2-line-height, 80px);
+      font-weight: var(--title-h-2-font-weight, 400);
+      align-items: flex-end;
+      justify-content: flex-start;
+      flex: 1;
+      outline: none;
+    }
+    .input::placeholder {
+      color: var(--darkblue-50, #8096b1);
+      text-align: left;
+      letter-spacing: -3.2px;
+      flex: 1;
+    }
   }
 
   .textNumber {
@@ -61,28 +91,5 @@
     position: relative;
     width: 200px;
     -webkit-text-stroke: 3.5px var(--darkblue);
-  }
-
-  .input {
-    margin: 0;
-    padding: 0;
-    width: 1180px;
-    height: 80px;
-    border: none;
-    gap: 10px;
-    font-family: var(--title-h-2-font-family, 'Germano-Regular', sans-serif);
-    font-size: var(--title-h-2-font-size, 80px);
-    line-height: var(--title-h-2-line-height, 80px);
-    font-weight: var(--title-h-2-font-weight, 400);
-    align-items: flex-end;
-    justify-content: flex-start;
-    flex: 1;
-    outline: none;
-  }
-  .input::placeholder {
-    color: var(--darkblue-50, #8096b1);
-    text-align: left;
-    letter-spacing: -3.2px;
-    flex: 1;
   }
 }
