--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -92,4 +92,58 @@
     width: 200px;
     -webkit-text-stroke: 3.5px var(--darkblue);
   }
+
+  .checkboxContainer {
+    margin-top: 32px;
+    margin-left: 452px;
+    width: 1100px;
+    display: flex;
+    flex-direction: row;
+    gap: 32px;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+
+    .checkbox {
+      position: absolute;
+      z-index: -1;
+      opacity: 0;
+      display: block;
+      width: 0;
+      height: 0;
+    }
+
+    .checkboxText {
+      margin: 0;
+      padding: 0;
+      color: var(--dark-blue, #002d63);
+      font-family: GOST type B;
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 38px;
+    }
+    .checkboxText:before {
+      content: "";
+      display: flex;
+      position: absolute;
+      left: -72px;
+      top: 18px;
+      width: 40px;
+      height: 40px;
+      background-image: url(./checkbox/checkbox.svg);
+      background-size: 40px 40px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    .checkboxTextConfidential {
+      text-decoration-line: underline;
+      text-underline-offset: 7px;
+    }
+  }
+
+  .checkbox:checked + .checkboxText:before {
+    background-image: url(./checkbox/checkboxChecked.svg);
+  }
 }
