--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -1,7 +1,8 @@
 .overlay {
+  overflow: auto;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
@@ -27,7 +28,7 @@
 
     max-width: 1720px;
     width: 100%;
-    min-height: 1146px;
+    height: fit-content;
 
     background-color: var(--white);
     border-radius: 8px;
