--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -15,10 +15,9 @@
   }
 
   &Button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: black;
+    top: -200px;
+    right: -360px;
+    z-index: 1;
   }
 
   .contact {
@@ -103,6 +102,7 @@
     align-items: center;
     position: relative;
     cursor: pointer;
+    z-index: 3;
 
     .checkbox {
       position: absolute;
