--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 
-.default {
+.promo {
   position: relative;
 
   display: flex;
@@ -14,7 +14,7 @@
   width: 450px;
   height: 450px;
 
-  &_ellipse_out {
+  .disk_out {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@
     border-radius: 50%;
   }
 
-  &_ellipse_in {
+  .disk_in {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,10 +43,18 @@
       rgb(242 246 255 / 100%) 97%
     );
     border-radius: 50%;
+
+    &:hover {
+      box-shadow: 0 10px 20px 0 rgb(0 45 99 / 30%);
+    }
+
+    &:active {
+      border: 2px solid var(--dark-blue, #002d63);
+    }
   }
 
-  &_text {
-    width: 280px;
+  .promoText {
+    max-width: 90%;
 
     font-family: var(--title-h-3-font-family, 'Germano-Regular', sans-serif);
     font-size: var(--title-h-3-font-size, 64px);
@@ -54,9 +62,19 @@
     line-height: var(--title-h-3-line-height, 64px);
     color: var(--white, #fff);
   }
+
+  .disk_in:hover .promoText {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 6px;
+  }
+
+  .disk_in:active .promoText {
+    color: var(--darkblue, #002d63);
+  }
 }
 
-.white {
+.radiant {
   position: relative;
 
   display: flex;
@@ -67,7 +85,7 @@
   width: 1000px;
   height: 1000px;
 
-  &_ellipse_out {
+  .gradient {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,7 +101,7 @@
     border-radius: 50%;
   }
 
-  &_ellipse_in {
+  .disk {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -92,25 +110,79 @@
     width: 40%;
     height: 40%;
 
-    background: var(--white, #fff);
     border-radius: 50%;
+
+    &:hover {
+      box-shadow: 0 10px 20px 0 rgb(0 45 99 / 30%);
+    }
+
+    &_white {
+      background: var(--white, #fff);
+
+      &:active {
+        border: 2px solid var(--dark-blue, #002d63);
+      }
+    }
+
+    &_blue {
+      background: var(--dark-blue, #002d63);
+
+      &:active {
+        border: 2px solid var(--white, #fff);
+      }
+    }
   }
 
-  &_text {
+  .text {
     font-family: var(--title-h-3-font-family, 'Germano-Regular', sans-serif);
     font-size: var(--title-h-3-font-size, 64px);
     font-weight: var(--title-h-3-font-weight, 400);
     line-height: var(--title-h-3-line-height, 64px);
-    color: var(--darkblue, #002d63);
+
+    &_white {
+      color: var(--white, #fff);
+    }
+
+    &_blue {
+      color: var(--darkblue, #002d63);
+    }
+  }
+
+  .disk:hover .text {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 5px;
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  width: 128px;
+  height: 128px;
+  animation: rotate 2s linear infinite;
+
+  &_blue {
+    path {
+      stroke: var(--darkblue, #002d63); // same svg but stroke is blue
+    }
   }
 }
 
 @media screen and (width <= 1280px) {
-  .default {
+  .promo {
     width: 320px;
     height: 320px;
 
-    &_text {
+    .promoText {
       width: 260px;
 
       font-family: var(--title-h-4-font-family, 'Germano-Regular', sans-serif);
@@ -120,11 +192,11 @@
     }
   }
 
-  .white {
+  .radiant {
     width: 700px;
     height: 700px;
 
-    &_text {
+    .text {
       font-size: var(--title-h-4-font-size, 48px);
       font-weight: var(--title-h-4-font-weight, 400);
       line-height: var(--title-h-4-line-height, 48px);
@@ -133,19 +205,19 @@
 }
 
 @media screen and (width <= 768px) {
-  .default {
+  .promo {
   }
 
-  .white {
+  .radiant {
   }
 }
 
 @media screen and (width <= 360px) {
-  .default {
+  .promo {
     width: 250px;
     height: 250px;
 
-    &_text {
+    .promoText {
       width: 180px;
       font-size: var(--title-tel-h-1-font-size, 40px);
       font-weight: var(--title-tel-h-1-font-weight, 400);
@@ -153,16 +225,14 @@
     }
   }
 
-  .white {
-    .white {
-      width: 600px;
-      height: 600px;
+  .radiant {
+    width: 600px;
+    height: 600px;
 
-      &_text {
-        font-size: var(--title-tel-h-1-font-size, 40px);
-        font-weight: var(--title-tel-h-1-font-weight, 400);
-        line-height: var(--title-tel-h-1-line-height, 40px);
-      }
+    .text {
+      font-size: var(--title-tel-h-1-font-size, 40px);
+      font-weight: var(--title-tel-h-1-font-weight, 400);
+      line-height: var(--title-tel-h-1-line-height, 40px);
     }
   }
 }
