--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -235,3 +235,10 @@
     display: block;
   }
 }
+
+@media screen and (width <= 360px) {
+  .content {
+    justify-content: space-between;
+    padding: 8px 16px;
+  }
+}
