feat: add disabled styles for Button

--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -99,6 +99,13 @@
       radial-gradient(closest-side, rgb(0 73 216 / 100%) 0%, rgb(255 255 255 / 0%) 100%)
     );
     border-radius: 50%;
+
+    &_gray {
+      background: var(
+        --radialblue-45,
+        radial-gradient(closest-side, rgb(3 64 137 / 45%) 0%, rgb(255 255 255 / 0%) 100%)
+      );
+    }
   }
 
   .disk {
@@ -114,6 +121,10 @@
 
     &:hover {
       box-shadow: 0 10px 20px 0 rgb(0 45 99 / 30%);
+
+      &:disabled {
+        box-shadow: none;
+      }
     }
 
     &_white {
@@ -121,6 +132,10 @@
 
       &:active {
         border: 2px solid var(--dark-blue, #002d63);
+
+        &:disabled {
+          border: none;
+        }
       }
     }
 
@@ -129,6 +144,10 @@
 
       &:active {
         border: 2px solid var(--white, #fff);
+
+        &:disabled {
+          border: none;
+        }
       }
     }
   }
@@ -152,6 +171,11 @@
     text-decoration: underline;
     text-decoration-thickness: 2px;
     text-underline-offset: 5px;
+  }
+
+  .disk:disabled .text {
+    color: var(--darkblue-50, #8096b1);
+    text-decoration: none;
   }
 }
 
@@ -207,9 +231,6 @@
       font-size: var(--title-h-4-font-size, 48px);
       line-height: var(--title-h-4-line-height, 48px);
     }
-  }
-
-  .radiant {
   }
 }
 
