--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -180,7 +180,7 @@
   }
 }
 
-input:not(:placeholder-shown) + .textContainer {
+.input:not(:placeholder-shown) + .textContainer {
   .textNumber {
     color: var(--dark-blue, #002D63);
   }
