--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -26,11 +26,19 @@
     display: flex;
     flex-direction: column;
 
-    max-width: 1720px;
+    max-width: calc(360px + (1720 - 360) * ((100vw - 360px) / (1920 - 360)));
     width: 100%;
     height: fit-content;
 
     background-color: var(--white);
     border-radius: 8px;
+  }
+}
+
+@media screen and (width <= 1280px) {
+  .overlay {
+    &Container {
+      max-width: 1180px;
+    }
   }
 }
