--- a/src/components/PopupContact/PopupContact.module.scss
+++ b/src/components/PopupContact/PopupContact.module.scss
@@ -8,11 +8,30 @@
 }
 
 .closeButton {
+  display: block;
+  object-fit: cover;
   background-image: url(./close_button/close-btn.svg);
-  width: 80px;
-  height: 80px;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 80px;
+  width: 100%;
+  max-height: 80px;
+  height: 100%;
   position: absolute;
   top: 28px;
   right: 28px;
   z-index: 2;
+}
+
+@media screen and (width <= 1280px) {
+  .popupTitle {
+    font-size: var(--title-h-2-molot-font-size, 100px);
+    line-height: var(--title-h-2-molot-line-height, 100px);
+  }
+
+  .closeButton {
+    background-image: url(./close_button/close-btn-1280.svg);
+    max-width: 70px;
+    max-height: 70px;
+  }
 }
