fix: fix final paths for fonts

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 @import './normalize.css';
 @import './variables/global';
-@import '../assets/fonts/fonts';
+@import '../assets/fonts/fonts.css';
 
 ul,
 li {
