fix: add button type, onSubmit func, checbox checked

--- a/src/components/PopupContact/FormContact/FormContact.module.scss
+++ b/src/components/PopupContact/FormContact/FormContact.module.scss
@@ -50,6 +50,7 @@
   max-width: 1180px;
   height: 80px;
   border: none;
+  resize: none;
   font-family: var(--title-h-2-font-family, 'Germano-Regular', sans-serif);
   font-size: var(--title-h-2-font-size, 80px);
   line-height: var(--title-h-2-line-height, 80px);
