--- a/src/components/Overlay/Overlay.module.scss
+++ b/src/components/Overlay/Overlay.module.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
 
-    max-width: calc(360px + (1720 - 360) * ((100vw - 360px) / (1920 - 360)));
+    max-width: calc(1180px + (1720 - 1180) * ((100vw - 1280px) / (1920 - 1280)));
     width: 100%;
     height: fit-content;
 
@@ -38,7 +38,26 @@
 @media screen and (width <= 1280px) {
   .overlay {
     &Container {
-      max-width: 1180px;
+      max-width: calc(704px + (1180 - 704) * ((100vw - 768px) / (1280 - 768)));
     }
   }
 }
+
+@media screen and (width <= 768px) {
+  .overlay {
+    &Container {
+      max-width: calc(360px + (704 - 360) * ((100vw - 360px) / (768 - 360)));
+    }
+  }
+}
+
+@media screen and (width <= 360px) {
+  .overlay {
+    &Container {
+      margin: 0;
+      max-width: 360px;
+      border-radius: 0;
+    }
+  }
+}
+
